feat : style on my e-commerce application

--- a/auth.html
+++ b/auth.html
@@ -13,7 +13,7 @@
 		</header>
 
 		<main>
-			<section>
+			<section class="container">
 				<!-- Connexion -->
 				<form id="login">
 					<h2>Connexion</h2>
