--- a/cart.html
+++ b/cart.html
@@ -14,7 +14,7 @@
 		</header>
 
 		<main>
-			<section>
+			<section class="container">
 				<table id="cartTable">
 					<thead>
 						<tr>
@@ -31,7 +31,7 @@
 				</table>
 			</section>
 
-			<section>
+			<section class="container">
 				<form id="promo">
 					<label for="promoInput">Code promo : </label>
 					<input type="text" id="promoInput" />
