--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<h1>Bienvenue sur My E-commerce</h1>
 			<div id="logged" style="display: none;">
 				<a href="cart.html">Votre Panier</a>
-				<a onclick="disconnect()">Déconnexion</a>
+				<a href="" onclick="logout()">Déconnexion</a>
 			</div>
 			<div id="unlogged">
 				<a href="auth.html">Connexion / Inscription</a>
