--- a/cart.html
+++ b/cart.html
@@ -10,7 +10,10 @@
 	<body>
 		<header>
 			<h1>Votre panier - My E-commerce</h1>
-			<div><a onclick="disconnect()">Déconnexion</a></div>
+			<div>
+				<a href="index.html">Accueil</a>
+				<a href="" onclick="logout()">Déconnexion</a>
+			</div>
 		</header>
 
 		<main>
