--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 				<a onclick="disconnect()">Déconnexion</a>
 			</div>
 			<div id="unlogged">
-				<a href="auth.html">Connexion / Inscription</a>
+				<a href="auth.html">Connexion/Inscription</a>
 			</div>
 		</header>
 
 		<main>
-			<section class="warning">Vous devez être connecter pour pouvoir accédée à votre panier !</section>
+			<section class="warning">Vous devez être connecter pour pouvoir accédée à votre panier</section>
 
 			<section id="productList">
 			</section>
@@ -30,7 +30,7 @@
 			&copy; 2025 Mon E-commerce
 
 			<div id="script">
-				<script type="module" src="static/js/index.js"></script>
+				<script type="module" src="static/js/main.js"></script>
 			</div>
 		</footer>
 	</body>
