--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Accueil - My E-Commerce</title>
 		<meta charset="UTF-8">
 
+		<link rel="shortcut icon" href="static/img/favicon.png" type="image/x-icon">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="static/css/main.css">
 	</head>
