Global little correction
- Copyright correction in all page
- Improved Global CSS Style
- Auth correct redirection
- Auth home button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		</main>
 
 		<footer>
-			&copy; 2025 Mon E-commerce
+			&copy; 2025 - My E-commerce
 
 			<div id="script">
 				<script type="module" src="static/js/index.js"></script>
