--- a/auth.html
+++ b/auth.html
@@ -11,6 +11,9 @@
 	<body>
 		<header>
 			<h1>Authentification - My E-commerce</h1>
+			<div>
+				<a href="index.html">Accueil</a>
+			</div>
 		</header>
 
 		<main>
@@ -39,6 +42,8 @@
 		</main>
 
 		<footer>
+			&copy; 2025 - My E-commerce
+
 			<div id="script">
 				<script type="module" src="static/js/auth.js"></script>
 			</div>
