--- a/cart.html
+++ b/cart.html
@@ -42,6 +42,8 @@
 					<button onclick="applyPromoCode()">Appliquer</button>
 				</form>
 
+				<div style="flex: 1"></div>
+
 				<form id="validate">
 					<strong>Total : <span id="totalPrice">0 €</span></strong>
 					<button onclick="validateCart()">Valider le panier</button>
@@ -50,6 +52,8 @@
 		</main>
 
 		<footer>
+			&copy; 2025 - My E-commerce
+
 			<div id="script">
 				<script type="module" src="static/js/cart.js"></script>
 			</div>
